  * Change:
    1.  --hosts prints now supported formats
    2. pair --exec with --exec-run, the latter now triggers the former
    3. relocate files
      3.1. ~/.clivelast -> ~/.cache/clive/last
      3.2. ~/.clivecache -> ~/.cache/clive/cache
    4. If HOME environment variable undefined, assume current workdir
    5. --version: print locale etc.
  * Fix:
    1. --version: copyright years
    2. file suffix for CCTV (.x-shockwave-flash -> .flv)
    3. Remove "see examples" from pod markup (closes issue #30)
    4. Prevent ".$suffix" output filenames
      4.1. Use $id if !$title && %i was not defined in --filename-format
      4.2. Related to issue #29
    5. --no-proxy: really disable all proxy use (closes issue #25)
      5.1. http_proxy setting was still used
    6. Can't call method "filename" on unblessed reference at Exec.pm line 5x
      6.1. e.g. clive URL --exec="ls;"
      6.2. Closes Debian bug #535459
  * Rename:
    1. --recall, --recall-file -> --last, --last-file
    2. CLIVE_HOME -> CLIVE_CACHE
  * Remove:
    1. -R, --raw (obsoleted by improved unicode support)
    2. --home-dir option
      2.1. Missleading name
      2.2. Obsoleted by --cache-file and --last-file
  * Manual page:
    1. Add note about numeric suffix (closes issue #28)
    2. Fix a number of typos, use better grammar
    3. Overhaul

 Developer-visible changes:
  * Add:
    1. clive/Compat.pm
    2. clive/Host/Spiegel.pm
    3. t/06golem.t
    4. t/14spiegel.t
    5. tlinks/golem.url
    6. tlinks/spiegel.url
  * New prerequisite: Config::Tiny
    1. Required by --upgrade-config
  * Makefile.PL:
    1. Extract VERSION from lib/clive/Config.pm
    2. Add "use warnings/strct"
    3. chmod +x


Version 2.2.2
(July 9, 2009)

 User-visible changes:
  * Change: Google: --format=mp4/best
    1. Default to flv if mp4 is not available
    2. Fix --format=best support

 Developer-visible changes:
  * Add: t/$host.t: NO_INTERNET variable support (closes issue #24)